# tcp

./: readme.md
client/: CMakeLists.txt  main.cpp
client/config/: config.h
client/internal/entities/: hellocodogram.h
client/internal/usecases/: sendhellousecase.cpp  sendhellousecase.h
server/: CMakeLists.txt  main.cpp
server/config/: config.h
server/internal/controller/tcp/: hellorouter.cpp  hellorouter.h
server/internal/entities/: hellocodogram.cpp  hellocodogram.h
server/internal/usecases/: hellocodogramrecievedusecase.cpp  hellocodogramrecievedusecase.h
